code/k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apollo11-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: apollo11-app
