code/k8s/03-core-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-api
  namespace: apollo11-app
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: core-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
  namespace: apollo11-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-api
  template:
    metadata:
      labels:
        app: core-api
    spec:
      containers:
      - name: core-api
        image: core-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 20
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
