code/k8s/04-quiz-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quiz-service
  namespace: apollo11-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: quiz-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-service
  namespace: apollo11-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-service
  template:
    metadata:
      labels:
        app: quiz-service
    spec:
      containers:
      - name: quiz-service
        image: quiz-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 15
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
