code/k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apollo11-ingress
  namespace: apollo11-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: core-api
            port:
              number: 80
      - path: /admin(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: admin-dashboard
            port:
              number: 80
      - path: /auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portal
            port:
              number: 80
      # /quiz is intentionally omitted to respect "NEVER exposed publicly" strict rule.
      # It is accessible internally within the cluster.
